tests/snapshots/analyze__propagate_liveness_memory_two-2.snap
---
source: tests/analyze.rs
assertion_line: 232
expression: live_ranges
---
rsp          enter:
|            mov _x, 1
|   _x       mov _y, 2
|   |   _y   mov _x, [_x + _y * 8]
|   ●        mov rax, _x
|   rax      jmp exit
|   |        exit:
●   ●        ret

