tests/snapshots/analyze__redundant_moves-2.snap
---
source: tests/analyze.rs
assertion_line: 279
expression: live_ranges
---
rsp                enter:
|                  mov _useless, 0
|                  mov _useless, 1
|                  mov _useless, 2
|                  mov _useless, 3
|        _useless  mov rax, _useless
|        rax       jmp exit
|        |         exit:
●        ●         ret

