tests/snapshots/analyze__smoke-2.snap
---
source: tests/analyze.rs
assertion_line: 96
expression: live_ranges
---
rsp  enter:
|      jmp exit
|    exit:
●      ret

